[package]
name = "mqtt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mqtt-core = { path = "../mqtt-core" }
bytes = "1.8.0"
tokio = { version = "1.40.0", features = ["full"] }
chrono = "0.4.38"
log = { version = "0.4.22", features = [ "std" ]}
colored = "2.1.0"
time = { version = "0.3.36", features = [ "formatting", "macros" ] }
tokio-rustls = { version = "0.26.0" }
rustls = "0.23.19"
toml = "0.8.19"
serde = { version = "1.0.215", features = [ "derive" ] }
futures = "0.3.31"

[dev-dependencies]
