[package]
name = "rdme-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = "0.32.1"
serde = { version = "1.0.219", features = ["derive"] }
sheesh = { git = "https://github.com/SMKJ42/sheesh-auth.git", branch = "main" }
toml = "0.8.20"
