[package]
name = "pymqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymqtt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
mqtt-core = { path = "../../mqtt-core", features = [ "bitpack" ] }
futures = "0.3.31"
tokio = { version = "1.44.1", features = ["full"] }
bytes = "1.10.1"
